--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>About</title>
@@ -63,6 +64,132 @@
                     </li>
                 </a>
             </ul>
+        </div>
+        <div id="content">
+            <h1 id="header">About</h1>
+            <p class="body-text"> Campbell County Fire District 1 was formed on January 1, 2002 after the merger of Camp Springs Volunteer Fire Department, Silver Grove Volunteer Fire Department and Eastern Campbell Volunteer Fire Department. Campbell County Fire District
+                1 currently has the largest response area within Campbell County. Currently the Silver Grove (Station 51) and Eastern Campbell (Station 52) are staffed on a 24/7 bases, providing both fire protection and EMS services. Camp Springs (Station
+                53) houses additional apparatus and is operated by dedicated volunteer members.</p>
+            <p class="body-text"> Campbell County Fire District 1 is always looking for compassionate, enthusiastic and motivated people to join our team. Being a volunteer is a great way to give back to the community and establish a sense of pride. If this is something that
+                you may want to do, please fill out a Membership Application located under the Join tab and return to any of our stations. Visit any of our stations and talk with our staff for more information.</p>
+            <hr>
+            <h1 class="body-header">History</h1>
+            <p class="body-text"> On January 1, 2002, the Fire Districts of Camp Springs, Silver Grove and Eastern Campbell consolidated into one large Fire District. Campbell County Fire District #1 now provides Fire and EMS service to the citizens of Silver Grove, Camp Springs,
+                Mentor, California, and part of the unincorporated area of Campbell County. Today, Campbell County Fire District #1 is the largest Fire Department in Campbell County. ​
+            </p>
+            <p class="body-text"><b><u>Camp Springs Volunteer Fire Department</u></b></p>
+            <p class="body-text"> In March 1949, a community meeting was held and ultimately resulted in the formation of the Camp Springs Volunteer Fire Department. A group of local property owners mortgaged their homes to raise money in order to establish the department.
+                Once established, The Camp Springs Volunteer Fire Department was the first rural fire department in Campbell County. Prior to the existence of taxing districts, funding of rural volunteer departments was always a challenge. A lot of departments
+                relied on soliciting donations door to door, raffles, and festivals. Recognizing the need for a more reliable source of funding, the community of Camp Springs petitioned the Circuit Court for the formation of a Fire Protection District.
+                As a result, Campbell County Fire Protection District #3 was formed on March 1, 1968, The first fire district in Northern Kentucky, and only the third in the entire state. <br> The first pumper was ordered in 1950 and delivered in 1952.
+                Later a 1946 GMC was donated and fitted with a 1000 gallon tank. This apparatus would become the first fire department tanker in the county. The Camp Springs Volunteer Fire Department had always relied on tankers, as there were very limited
+                fire hydrants in the area.</p>
+            <p class="body-text"><b><u>Silver Grove Volunteer Fire Department:</u></b></p>
+            <p class="body-text"> In 1950 when the C&O Railroad decided to stop providing service to the community including fire protection, the citizens had to find a way to provide their own fire protection. After several town meetings, a resolution was passed to start
+                The Silver Grove Volunteer Fire Department. On October 5th, 1950 marked the first meeting of the Silver Grove Volunteer Fire Department and the officers of the Executive Board were elected.<br> The new Fire Department asked the citizens
+                to pledge twenty-five dollars a year to help finance the department so they could purchase a fire truck and a building to house the equipment. In November of 1950, the first fire truck was purchased from a neighboring department.<br> In
+                the 1960s the City of Silver Grove agreed to contract with the fire department to provide fire protection for three thousand dollars per year.<br> On March 6th, 1979, the Silver Grove Volunteer Fire Department fought a fire that damaged
+                a National Treasure. A fire destroyed the railroad's roundhouse which resulted in millions of dollars of loss and heavily damaged the Freedom Train that was used during America's 1976 bi-centennial celebration.<br> The Silver Grove Volunteer
+                Fire Department again would see a heavy loss in the community during the worst floods that happened in 1964 and again in 1997. The fire department continued to provide fire protection and emergency medical service by utilizing boats. Since
+                1959 the members have continued to be dedicated and proud to serve the community and its neighbors.</p>
+            <p class="body-text"><b><u>Eastern Campbell Volunteer Fire Department:</u></b></p>
+            <p class="body-text">In 1964 individuals in the rural areas of southeastern Campbell County decided it was time to establish fire protection. Eastern Campbell Fire Department was established and was given the responsibility for the area south of Carthage Road
+                to the Campbell/Pendleton County line and from the Ohio River to the Persimmon Grove Pike and east of Fisher Road. The area contained approximately 10 square miles with a population of around 1500. The main communities were the cities
+                of Mentor and California. Also included were the unincorporated areas of Carthage, Gubsers Mill, Flagg Springs, and Koehler.<br> The first memorable fire fought by the new department was at the YMCA Camp. The Department responded to a
+                fire in the dining hall of the facility. Members responded in street clothes and jackets as protective clothing was not available to them. The structure which was a loss, but a valiant effort was made by the members. After this fire, neighboring
+                departments donated several sets of used protective equipment for the firefighters to use. In 1980 the membership saw the need to organize and later became Fire Protection District #7. With this tax base, the department began to generate
+                a reliable source of revenue. On August 12, 1988, the department suffered a great loss when in the early morning, members were dispatched for a fire at the fire station. Firefighters arrived at the station to find the building totally
+                involved in fire. One pumper was saved from an addition under construction. At this low point, the department pushed on. Apparatus was borrowed from other department and a tent was erected in the back for apparatus storage. The department
+                later was able to purchase equipment and rebuild a new firehouse. ​
+            </p>
+            <hr>
+            <h1 class="body-header">Personell</h1>
+            <div class="d-flex flex-row justify-content-between">
+                <p class="body-text"><b>Chief:</b> Wayne Werrmann</p>
+                <p class="body-text"><b>Administration Officer:</b> Captain Eric Noble</p>
+            </div>
+            <p class="body-text-big"><b><u>Full Time Staff</u></b></p>
+            <div class="d-flex flex-row">
+                <div class="ppl">
+                    <p class="body-text red"><b>Red Shift</b></p>
+                    <p class="body-text">FF/Medic Alex Bingham<br> FF/Medic Clark Throckmorton<br> FF/EMT Chris Neyman</p>
+                </div>
+                <div class="ppl">
+                    <p class="body-text blue"><b>Blue Shift</b></p>
+                    <p class="body-text">Lieutenant Brian Franklin<br> FF/Medic Josh Ilg<br> FF/EMT Benton Clift</p>
+                </div>
+                <div class="ppl">
+                    <p class="body-text green"><b>Green Shift</b></p>
+                    <p class="body-text">Lieutenant Jake See<br> FF/Medic Erika Muench<br> FF/EMT Zach Gabis</p>
+                </div>
+            </div>
+            <p class="body-text-big"><b><u>Part-Time Staff</u></b></p>
+            <div class="d-flex">
+                <div class="ppl">
+                    <p class="body-text yellow"><b>Medics</b></p>
+                    <p class="body-text">Cord Trowbridge<br>Chris Combs</p>
+                </div>
+                <div class="ppl">
+                    <p class="body-text yellow"><b>EMTs</b></p>
+                    <p class="body-text">Jonathan Schmidt<br>John Seitz<br>Kurtis Stanton<br>Dan Mcgraw<br>Eric Herman</p>
+                </div>
+            </div>
+            <p class="body-text-big"><b><u>Volunteer Members</u></b></p>
+            <div class="d-flex">
+                <div class="ppl">
+                    <p class="yellow body-text"><b>Deputy Chief</b></p>
+                    <p class="body-text">Greg Buckler</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>EMS Assistant Chief</b></p>
+                    <p class="body-text">Patricia Parker</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>ALS Coordinator</b></p>
+                    <p class="body-text">Lieutenant Jake See</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>District Chaplin</b></p>
+                    <p class="body-text">Pastor Adam Forbes</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>Safety Officer</b></p>
+                    <p class="body-text">Captain Phil Sauerbeck</p>
+                </div>
+            </div>
+            <div class="ppl">
+                <p class="body-text-big"><b><u>Other Volunteers</u></b></p>
+                <div class="d-flex">
+                    <p class="body-text">Jacob Biery<br>Josh Biery<br>Michele Dawn<br>Tyler Holzschuh<br>Josh Johnson<br>Taylor Leick<br>Lieutenant Jason Saner</p>
+                    <p class="body-text">Ray Schultz<br>Captain Scott Sebastian<br>Lou Sendelback<br>Nathan Shaw<br>Katie Shurley<br>Chad Todd Smith</p>
+                    <p class="body-text">Noah Snyder<br>Andrew Songy<br>Jason Sparks<br>Captain Randy Steinhauer<br>Dirk Vickerstaff<br>Aaron Weiner</p>
+                </div>
+            </div>
+            <hr>
+            <h1 class="body-header">Board Members</h1>
+            <div class="d-flex">
+                <div class="ppl">
+                    <p class="yellow body-text"><b>Chairman</b></p>
+                    <p class="body-text">Paul See</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>Vice Chairman</b></p>
+                    <p class="body-text">Stanley Schultz</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>Secretary</b></p>
+                    <p class="body-text">Eric Noble</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>Treasurer</b></p>
+                    <p class="body-text">Position Open</p>
+                </div>
+                <div class="ppl">
+                    <p class="yellow body-text"><b>Other Board Members</b></p>
+                    <p class="body-text">
+                        Chuck Heilman<br> Chris Fuchs<br> Randy Steinhauer</p>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
