fixed centering on news and events

--- a/news-and-events.html
+++ b/news-and-events.html
@@ -64,36 +64,29 @@
                 </a>
             </ul>
         </div>
-    </div>
-    <div id="content">
-        <h1 id="header">News/Events</h1>
-        <hr>
-        <div>
-            <h1 class="body-header">
-                Open Burning
-            </h1>
-            <p class="body-text">
-                Burn Permits Available From October 1, 2020, thru April 30, 2021.
-                <br>
-                If you need a burn permit:
-                <br>
-                <br>
-                1. Stop in or call the Camp Springs Station Monday through Friday 8 AM to 5 PM, and Saturday 8 to 12 PM to fill out an application 
-                to burn and schedule a time to inspect the burn area.
-                <br>
-                Camp Springs station: (859) 635-9255
-                <br>
-                <br>
-                2. You may print a copy of the permit in the form sections and fill in the applicable information. This can be presented at one 
-                of the locations above to the Fire Officer responsible for the Burn Area inspection. Burn area inspections must be scheduled in 
-                advance of issuing the permit and will be scheduled at the convenience of the officer designated by the Fire Chief to issue permits.
-                <br>
-                <br>
-                3. Turn in your application for a burn permit at least 48 hours before you plan to burn as burning cannot take place until the burn area is inspected and a permit issued.
-                <br>
-                <br>
-                Wayne Werrmann, Fire Chief
-            </p>
+
+        <div id="content">
+            <h1 id="header">News/Events</h1>
+            <hr>
+            <div>
+                <h1 class="body-header">
+                    Open Burning
+                </h1>
+                <p class="body-text">
+                    Burn Permits Available From October 1, 2020, thru April 30, 2021.
+                    <br> If you need a burn permit:
+                    <br>
+                    <br> 1. Stop in or call the Camp Springs Station Monday through Friday 8 AM to 5 PM, and Saturday 8 to 12 PM to fill out an application to burn and schedule a time to inspect the burn area.
+                    <br> Camp Springs station: (859) 635-9255
+                    <br>
+                    <br> 2. You may print a copy of the permit in the form sections and fill in the applicable information. This can be presented at one of the locations above to the Fire Officer responsible for the Burn Area inspection. Burn area inspections
+                    must be scheduled in advance of issuing the permit and will be scheduled at the convenience of the officer designated by the Fire Chief to issue permits.
+                    <br>
+                    <br> 3. Turn in your application for a burn permit at least 48 hours before you plan to burn as burning cannot take place until the burn area is inspected and a permit issued.
+                    <br>
+                    <br> Wayne Werrmann, Fire Chief
+                </p>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
