Added apparatus page

--- a/about.html
+++ b/about.html
@@ -29,6 +29,11 @@
                         About
                     </li>
                 </a>
+                <a href="apparatus.html" class="nav-item-link">
+                    <li class="nav-item">
+                        Apparatus
+                    </li>
+                </a>
                 <a href="burn-permits.html" class="nav-item-link">
                     <li class="nav-item">
                         Burn Permits
