--- a/apparatus.html
+++ b/apparatus.html
@@ -12,9 +12,17 @@
     <title>Burn Permits</title>
 </head>
 
-<body>
+<body onclick=collapse()>
     <div id="page">
-        <div class="sticky">
+        <div id="mobile-header">
+            <div id="hamburger-toggle" onclick=hamburgerControl(event)>
+                ≡
+            </div>
+        </div>
+
+        <div id="glazed"></div>
+
+        <div class="sticky" onclick=preventCollapse(event)>
             <div id="logo-img">
                 <img src="images/logo.png" alt="logo">
             </div>
@@ -210,6 +218,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
