--- a/join.html
+++ b/join.html
@@ -13,9 +13,17 @@
     <title>Join Us</title>
 </head>
 
-<body>
+<body onclick=collapse()>
     <div id="page">
-        <div class="sticky">
+        <div id="mobile-header">
+            <div id="hamburger-toggle" onclick=hamburgerControl(event)>
+                ≡
+            </div>
+        </div>
+
+        <div id="glazed"></div>
+
+        <div class="sticky" onclick=preventCollapse(event)>
             <div id="logo-img">
                 <img src="images/logo.png" alt="logo">
             </div>
@@ -102,6 +110,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
