--- a/member-portal.html
+++ b/member-portal.html
@@ -12,9 +12,17 @@
     <title>Employee Portal</title>
 </head>
 
-<body>
+<body onclick=collapse()>
     <div id="page">
-        <div class="sticky">
+        <div id="mobile-header">
+            <div id="hamburger-toggle" onclick=hamburgerControl(event)>
+                ≡
+            </div>
+        </div>
+
+        <div id="glazed"></div>
+
+        <div class="sticky" onclick=preventCollapse(event)>
             <div id="logo-img">
                 <img src="images/logo.png" alt="logo">
             </div>
@@ -112,6 +120,8 @@
             <a href="http://cloud1.firehousesoftware.com/ky/campbell/" class="btn btn-info btn-width body-text btn-custom">FireHouse Software</a>
         </div>
     </div>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
