Fixed styling for mobile on about page

--- a/about.html
+++ b/about.html
@@ -122,82 +122,82 @@
                 <p class="body-text"><b>Administration Officer:</b> Captain Eric Noble</p>
             </div>
             <p class="body-text-big"><b><u>Full Time Staff</u></b></p>
-            <div class="d-flex flex-row">
-                <div class="ppl">
+            <div class="d-flex flex-row row">
+                <div class="ppl col">
                     <p class="body-text red"><b>Red Shift</b></p>
                     <p class="body-text">FF/Medic Alex Bingham<br> FF/Medic Clark Throckmorton<br> FF/EMT Chris Neyman</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="body-text blue"><b>Blue Shift</b></p>
                     <p class="body-text">Lieutenant Brian Franklin<br> FF/Medic Josh Ilg<br> FF/EMT Benton Clift</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="body-text green"><b>Green Shift</b></p>
                     <p class="body-text">Lieutenant Jake See<br> FF/Medic Erika Muench<br> FF/EMT Zach Gabis</p>
                 </div>
             </div>
             <p class="body-text-big"><b><u>Part-Time Staff</u></b></p>
-            <div class="d-flex">
-                <div class="ppl">
+            <div class="d-flex row">
+                <div class="ppl col">
                     <p class="body-text yellow"><b>Medics</b></p>
                     <p class="body-text">Cord Trowbridge<br>Chris Combs</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="body-text yellow"><b>EMTs</b></p>
                     <p class="body-text">Jonathan Schmidt<br>John Seitz<br>Kurtis Stanton<br>Dan Mcgraw<br>Eric Herman</p>
                 </div>
             </div>
             <p class="body-text-big"><b><u>Volunteer Members</u></b></p>
-            <div class="d-flex">
-                <div class="ppl">
+            <div class="d-flex row">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>Deputy Chief</b></p>
                     <p class="body-text">Greg Buckler</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>EMS Assistant Chief</b></p>
                     <p class="body-text">Patricia Parker</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>ALS Coordinator</b></p>
                     <p class="body-text">Lieutenant Jake See</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>District Chaplin</b></p>
                     <p class="body-text">Pastor Adam Forbes</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>Safety Officer</b></p>
                     <p class="body-text">Captain Phil Sauerbeck</p>
                 </div>
             </div>
             <div class="ppl">
                 <p class="body-text-big"><b><u>Other Volunteers</u></b></p>
-                <div class="d-flex">
-                    <p class="body-text">Jacob Biery<br>Josh Biery<br>Michele Dawn<br>Tyler Holzschuh<br>Josh Johnson<br>Taylor Leick<br>Lieutenant Jason Saner</p>
-                    <p class="body-text">Ray Schultz<br>Captain Scott Sebastian<br>Lou Sendelback<br>Nathan Shaw<br>Katie Shurley<br>Chad Todd Smith</p>
-                    <p class="body-text">Noah Snyder<br>Andrew Songy<br>Jason Sparks<br>Captain Randy Steinhauer<br>Dirk Vickerstaff<br>Aaron Weiner</p>
+                <div class="d-flex row">
+                    <p class="body-text col">Jacob Biery<br>Josh Biery<br>Michele Dawn<br>Tyler Holzschuh<br>Josh Johnson<br>Taylor Leick<br>Lieutenant Jason Saner</p>
+                    <p class="body-text col">Ray Schultz<br>Captain Scott Sebastian<br>Lou Sendelback<br>Nathan Shaw<br>Katie Shurley<br>Chad Todd Smith</p>
+                    <p class="body-text col">Noah Snyder<br>Andrew Songy<br>Jason Sparks<br>Captain Randy Steinhauer<br>Dirk Vickerstaff<br>Aaron Weiner</p>
                 </div>
             </div>
             <hr>
             <h1 class="body-header">Board Members</h1>
-            <div class="d-flex">
-                <div class="ppl">
+            <div class="d-flex row">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>Chairman</b></p>
                     <p class="body-text">Paul See</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>Vice Chairman</b></p>
                     <p class="body-text">Stanley Schultz</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>Secretary</b></p>
                     <p class="body-text">Eric Noble</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>Treasurer</b></p>
                     <p class="body-text">Position Open</p>
                 </div>
-                <div class="ppl">
+                <div class="ppl col">
                     <p class="yellow body-text"><b>Other Board Members</b></p>
                     <p class="body-text">
                         Chuck Heilman<br> Chris Fuchs<br> Randy Steinhauer</p>
